[gd_scene load_steps=2 format=3 uid="uid://dnqlb3446gic8"]

[ext_resource type="Script" uid="uid://ccxjygvvxpq23" path="res://scripts/screen_burning_ui.gd" id="1_a8gkt"]

[node name="ScreenBurningUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a8gkt")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.101960786, 0.101960786, 0.18039216, 1)

[node name="MainContainer" type="VBoxContainer" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -225.0
offset_right = 300.0
offset_bottom = 225.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="Background/MainContainer"]
layout_mode = 2
text = "SCREEN BURNING STATION"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Background/MainContainer"]
layout_mode = 2

[node name="JobsScrollContainer" type="ScrollContainer" parent="Background/MainContainer"]
clip_contents = false
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="JobsContainer" type="VBoxContainer" parent="Background/MainContainer/JobsScrollContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="Background/MainContainer"]
layout_mode = 2
text = "Close"
